--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ swfobject.embedSWF = function(url, cont, width, height){
     player.load({ url: url });
 }
 
-swfobject.embedSWF('./duck-life.swf', 'ruffle', 100%, 100%);
+swfobject.embedSWF('./duck-life.swf', 'ruffle', 850, 600);
         </script>
     </body>
 </html>
